--- a/src/components/main-content.css
+++ b/src/components/main-content.css
@@ -1,4 +1,15 @@
-@import url(https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap);
+.font {
+  font-family: "Quicksand", sans-serif;
+}
+
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
+}
 
 #form {
   position: relative;
@@ -28,7 +39,8 @@
 
 #label-line::after {
   content: "";
-  position: absolute; bottom: -2px;
+  position: absolute;
+  bottom: -2px;
   left: 0px;
   width: 100%;
   height: 100%;
@@ -42,8 +54,6 @@
   bottom: 5px;
   left: 1px;
   transition: all 0.5s ease;
-  font-family: "Quicksand", sans-serif;
-  /* use <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet"> */
 }
 
 /* when input is clicked, when input has content
