--- a/src/components/css/password-generator.css
+++ b/src/components/css/password-generator.css
@@ -18,7 +18,8 @@ h2 {
   min-width: 330px;
 }
 
-#generateButton {
+#generateBtn {
+  outline: none;
   border: hidden;
   border-radius: 5px;
   background-color: rgb(106, 208, 242);
@@ -27,22 +28,25 @@ h2 {
   height: 2em;
 }
 
-#create {
-  position: relative;
+#btn-create {
+  outline: none;
+  transform: translateX(0%);
+  transition: transform 0.4s ease;
 }
 
-#create::after {
-  content: "";
+#btn-create:after {
+  content: url(iconmonstr-arrow-30-24.png);
   position: absolute;
+  outline: none;
+  left: 240px;
+  bottom: -5px;
+  pointer-events: none;
   opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
+  transition: opacity 0.4s ease;
 }
 
-#generateButton:hover + #create {
-  transform: translateX(30%);
-}
-#generateButton:hover + #create::after {
+#generateBtn:hover #btn-create,
+#generateBtn:hover #btn-create:after {
+  transform: translateX(-20%);
   opacity: 1;
 }
