--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,7 @@
-
+@media screen and (max-width: 800px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+        height: 140px;
+    }
+}
