state.value bug

--- a/src/components/css/password-generator.css
+++ b/src/components/css/password-generator.css
@@ -18,7 +18,11 @@ h2 {
   min-width: 330px;
 }
 
-#generateBtn {
+#length {
+  width: 60%;
+}
+
+#copyBtn {
   outline: none;
   border: hidden;
   border-radius: 5px;
@@ -28,13 +32,13 @@ h2 {
   height: 2em;
 }
 
-#btn-create {
+#btn-copy {
   outline: none;
   transform: translateX(0%);
   transition: transform 0.4s ease;
 }
 
-#btn-create:after {
+#btn-copy:after {
   content: url(iconmonstr-arrow-30-24.png);
   position: absolute;
   outline: none;
@@ -45,8 +49,8 @@ h2 {
   transition: opacity 0.4s ease;
 }
 
-#generateBtn:hover #btn-create,
-#generateBtn:hover #btn-create:after {
+#copyBtn:hover #btn-copy,
+#copyBtn:hover #btn-copy:after {
   transform: translateX(-20%);
   opacity: 1;
 }
