still needs fixing

--- a/src/components/css/password-generator.css
+++ b/src/components/css/password-generator.css
@@ -10,47 +10,54 @@ span {
 
 h2 {
   overflow: visible;
+  text-align: center;
 }
 
-#inDivs {
+.inDivs {
   width: 50vw;
   max-width: 400px;
   min-width: 330px;
 }
 
-#length {
+.length {
   width: 60%;
 }
 
-#copyBtn {
+.pw {
+  font-size: 50px;
+  color: green;
+  text-align: center;
+}
+
+.copyBtn {
   outline: none;
   border: hidden;
   border-radius: 5px;
-  background-color: rgb(106, 208, 242);
+  background-color: rgb(120, 211, 242);
   margin: 20px;
   width: 60%;
   height: 2em;
 }
 
-#btn-copy {
+.btn-copy {
   outline: none;
   transform: translateX(0%);
   transition: transform 0.4s ease;
 }
 
-#btn-copy:after {
-  content: url(iconmonstr-arrow-30-24.png);
+.btn-copy:after {
+  content: url(baseline_content_copy_black_18dp.png);
   position: absolute;
   outline: none;
   left: 240px;
-  bottom: -5px;
+  bottom: -10px;
   pointer-events: none;
   opacity: 0;
   transition: opacity 0.4s ease;
 }
 
-#copyBtn:hover #btn-copy,
-#copyBtn:hover #btn-copy:after {
+.copyBtn:hover .btn-copy,
+.copyBtn:hover .btn-copy:after {
   transform: translateX(-20%);
   opacity: 1;
 }
