--- a/src/components/css/password-generator.css
+++ b/src/components/css/password-generator.css
@@ -20,13 +20,31 @@ h2 {
 }
 
 .length {
-  width: 60%;
+  width: 50%;
 }
 
-.pw {
+#pw {
   font-size: 50px;
-  color: green;
   text-align: center;
+  word-break: break-all;
+  width: fit-content;
+  max-width: 60%;
+}
+
+#pw[color="green"] {
+color: green;
+}
+
+#pw[color="orange"] {
+color: orange;
+}
+
+.unbound-container {
+  width: 100vw;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .copyBtn {
@@ -35,7 +53,7 @@ h2 {
   border-radius: 5px;
   background-color: rgb(120, 211, 242);
   margin: 20px;
-  width: 60%;
+  width: 240px;
   height: 2em;
 }
 
