--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap);
-
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');
 
 body {
   margin: 0;
@@ -8,4 +8,8 @@ body {
 
 #root {
   height: inherit;
+}
+
+html {
+  min-width: 340px;
 }
