--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -1,23 +1,25 @@
 
-
 #main {
-    background: url(hacker.svg) no-repeat;
-    background-position: top left;
-    background-size: auto 100%;
     background-color: rgb(207, 243, 255);
     width: 100%;
     height: 100%;
 }
 
+img {
+    width: auto;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 .text {
-    position: relative;
+    position: absolute;
     width: 400px;
     top: 30%;
-    margin: auto 10% auto auto;
+    left: 70%;
     backdrop-filter: blur(5px);
     padding: 8px;
     text-align: center;
     border-radius: 15px;
     font-family: 'Electrolize', sans-serif;
-
 }
