--- a/src/components/css/password-checker.css
+++ b/src/components/css/password-checker.css
@@ -13,7 +13,7 @@
 
 #form {
   position: relative;
-  height: 50px;
+  height: 60px;
   width: 50%;
   max-width: 450px;
   min-width: 200px;
@@ -30,10 +30,11 @@
 }
 
 #input {
+  position: absolute;
   width: 100%;
   height: 100%;
   color: black;
-  padding-top: 10px;
+  padding-top: 15px;
   border: none;
   outline: none;
 }
